--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^2.0.3",
+    "async": "^2.6.1",
+    "lodash": "^4.17.10",
+    "material-ui-table": "^0.1.2",
+    "mui-data-table": "^0.1.7",
     "react": "^16.4.2",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "0.9.5"
+    "react-google-login": "^3.2.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.4",
+    "react-tabs": "^2.2.2",
+    "reactable-search": "^0.2.49"
   },
   "devDependencies": {},
   "scripts": {
